build: integrate rollup for module bundling
refactor: load project details from `package.json`

--- a/.codecaprc.json
+++ b/.codecaprc.json
@@ -1,8 +1,8 @@
 {
    "ruleSet": [
       {
-         "target": "**/*.ts",
-         "targetExclude": "node_modules/**",
+         "target": "**/*.{js,ts}",
+         "targetExclude": ["node_modules/**", "bin/**"],
          "headerFile": "license-header.txt",
          "headerDelimiter": "^(?![\\/ ]\\*)."
       }
