--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
       "forceConsistentCasingInFileNames": true,
       "lib": ["ESNext"],
       "module": "NodeNext",
+      "noEmit": true,
       "noImplicitAny": true,
       "noImplicitReturns": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true,
-      "outDir": "dist",
       "removeComments": true,
       "rootDir": "src",
       "skipLibCheck": true,
