chore: correct package author url

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
    },
    "author": {
       "name": "Mayeku Khisa",
-      "url": "http://mayekukhisa.com"
+      "url": "https://mayekukhisa.com"
    },
    "license": "MIT",
    "keywords": [
