--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
          "label": "build",
          "type": "shell",
-         "command": "npm run build"
+         "command": "pnpm build"
       }
    ]
 }
