--- a/package.json
+++ b/package.json
@@ -37,27 +37,27 @@
       "build": "rollup -c",
       "build:prod": "rollup -c --environment NODE_ENV:production",
       "start": "node bin/index.js",
-      "lint": "eslint --ext .ts src/ && prettier --check ./**/*.{js,json,md,yml}",
-      "lint:fix": "eslint --ext .ts src/ --fix && prettier --write ./**/*.{js,json,md,yml}"
+      "check": "eslint --ext .ts src/ && prettier --check ./**/*.{js,json,md,yml}",
+      "fix": "eslint --ext .ts src/ --fix && prettier --write ./**/*.{js,json,md,yml}"
    },
    "dependencies": {
-      "chalk": "^5",
-      "commander": "^11",
-      "glob": "^10"
+      "chalk": "^5.3.0",
+      "commander": "^11.1.0",
+      "glob": "^10.4.5"
    },
    "devDependencies": {
-      "@rollup/plugin-replace": "^5",
-      "@rollup/plugin-typescript": "^11",
-      "@types/glob": "^8",
-      "@types/node": "^20",
-      "@typescript-eslint/eslint-plugin": "^6",
-      "@typescript-eslint/parser": "^6",
-      "eslint": "^8",
-      "eslint-config-prettier": "^9",
-      "eslint-plugin-prettier": "^5",
-      "eslint-plugin-simple-import-sort": "^10",
-      "prettier": "^3",
-      "rollup": "^4",
-      "typescript": "^5"
+      "@rollup/plugin-replace": "^5.0.7",
+      "@rollup/plugin-typescript": "^11.1.6",
+      "@types/glob": "^8.1.0",
+      "@types/node": "^20.16.5",
+      "@typescript-eslint/eslint-plugin": "^6.21.0",
+      "@typescript-eslint/parser": "^6.21.0",
+      "eslint": "^8.57.1",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-plugin-prettier": "^5.2.1",
+      "eslint-plugin-simple-import-sort": "^10.0.0",
+      "prettier": "^3.3.3",
+      "rollup": "^4.21.3",
+      "typescript": "^5.6.2"
    }
 }
