--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "rootDir": "src",
       "skipLibCheck": true,
       "strict": true,
-      "target": "ESNext",
+      "target": "ESNext"
    },
-   "include": ["src/**/*.ts"],
+   "include": ["src/**/*.ts"]
 }
