--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
    "dependencies": {
       "chalk": "^5.3.0",
       "commander": "^11.1.0",
-      "glob": "^10.4.5"
+      "glob": "^10.4.5",
+      "ignore": "^6.0.2"
    },
    "devDependencies": {
       "@rollup/plugin-replace": "^5.0.7",
