--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,5 +39,5 @@ jobs:
          - name: Publish to NPM
            if: ${{ steps.release.outputs.release_created }}
            env:
-              NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+              NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
            run: npm publish
