--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,18 @@
 {
-   "env": {
-      "es2021": true,
-      "node": true
-   },
-   "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier",
-      "plugin:prettier/recommended"
-   ],
-   "parser": "@typescript-eslint/parser",
-   "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-   },
-   "plugins": ["@typescript-eslint", "prettier", "simple-import-sort"],
-   "rules": {
-      "prettier/prettier": "error",
-      "simple-import-sort/exports": "error",
-      "simple-import-sort/imports": "error"
-   }
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier", "plugin:prettier/recommended"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "prettier", "simple-import-sort"],
+  "rules": {
+    "prettier/prettier": "error",
+    "simple-import-sort/exports": "error",
+    "simple-import-sort/imports": "error"
+  }
 }
